--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人博客 | LX Music 音源分享</title>
+    <title>TZB679 | LX Music 音源分享</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -287,8 +287,9 @@
                         <a href="https://www.123912.com/s/6OBFTd-aHHZh" class="link-item" target="_blank">
                             <i class="fas fa-archive"></i>
                             <div class="link-text">
-                                <strong>老网盘地址</strong>
+                                <strong>下载</strong>
                                 <span>https://www.123912.com/s/6OBFTd-aHHZh （包含 Hi-Fi 示例）</span>
+                                <span>https://github.com/TZB679/USEFUL-LX-MUSIC-SOURCES/releases</span>
                             </div>
                         </a>
                     </div>
