Update last update date and add source link
Updated the last update date and added a new link to the source update for the compressed package.

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <h1 class="blog-title">LX Music 音源分享</h1>
             <p class="blog-subtitle">搜集了自本人使用 LX Music 以来整理的各种音源，持续更新中~</p>
             <div class="publish-date">
-                <i class="far fa-calendar-alt"></i> 最后更新：2025年12月
+                <i class="far fa-calendar-alt"></i> 最后更新：2026年1月
             </div>
         </div>
     </header>
@@ -377,7 +377,7 @@
                         <div class="update-date">
                             <i class="far fa-calendar-check"></i> 2025年12月
                         </div>
-                        <p>发现了压缩包的源更新链接，网盘免登陆下载有限制，暂停在网盘同步压缩包。</p>
+                        <p>发现了压缩包的源更新链接，网盘免登陆下载有限制，暂停在网盘同步压缩包。目前最新地址：https://github.com/TZB679/USEFUL-LX-MUSIC-SOURCES/releases</p>
                     </div>
                     <p>本音源集合持续更新，建议定期访问本页面获取最新信息。</p>
                 </div>
