--- a/index.html
+++ b/index.html
@@ -421,11 +421,11 @@
                             </div>
                         </a>
                         
-                        <a href="https://git-scm.com/install/windows" class="link-item" target="_blank">
+                        <a href="https://share.feijipan.com/s/4MW2urSI" class="link-item" target="_blank">
                             <i class="fas fa-code-branch"></i>
                             <div class="link-text">
-                                <strong>Git 下载地址</strong>
-                                <span>https://git-scm.com/install/windows</span>
+                                <strong>lx music 电脑魔改版（独家），支持自定义播放器</strong>
+                                <span>https://share.feijipan.com/s/4MW2urSI</span>
                             </div>
                         </a>
                     </div>
