Update audio source for background music

--- a/index.html
+++ b/index.html
@@ -583,8 +583,8 @@
     
     <!-- 添加音频元素（隐藏）并设置自动循环播放 -->
     <audio id="background-music" loop>
-        <!-- 替换下面的 src 为你想要播放的音乐地址 -->
-        <source src="https://example.com/your-music.mp3" type="audio/mpeg">
+        <!-- 替换下面的 src 为要播放的音乐地址 -->
+        <source src="https://github.com/TZB679/USEFUL-LX-MUSIC-SOURCES/latest-commit/main/bgm.mp3" type="audio/mpeg">
     </audio>
 </head>
 <body>
