--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
     <!-- 添加音频元素（隐藏）并设置自动循环播放 -->
     <audio id="background-music" loop>
         <!-- 替换下面的 src 为要播放的音乐地址 -->
-        <source src="https://github.com/TZB679/USEFUL-LX-MUSIC-SOURCES/latest-commit/main/bgm.mp3" type="audio/mpeg">
+        <source src="https://ghproxy.net/https://raw.githubusercontent.com/TZB679/USEFUL-LX-MUSIC-SOURCES/refs/heads/main/bgm.mp3" type="audio/mpeg">
     </audio>
 </head>
 <body>
