Add downloadable music source link section
Added a new link section with a downloadable music source.

--- a/index.html
+++ b/index.html
@@ -659,6 +659,16 @@
                         最近发现了压缩包的源更新链接，老网盘的免登陆下载有限制，暂停在该网盘同步压缩包。以下是可用的下载方式：
                     </p>
                     
+                   <div class="link-section">
+                        <a href="https://ghproxy.net/https://raw.githubusercontent.com/TZB679/USEFUL-LX-MUSIC-SOURCES/refs/heads/main/%5B%E4%B8%8D%E7%A8%B3%E5%AE%9A%5DLX(%E9%9D%9E%E5%AE%98%E6%96%B9)%E5%85%AC%E4%BC%97%E5%8F%B7%E9%9F%B3%E6%BA%90%20v4.js" class="link-item" target="_blank">
+                            <i class="fas fa-cloud-download-alt"></i>
+                            <div class="link-text">
+                                <strong>直接可用的音源（点击下载）</strong>
+                                <span>https://ghproxy.net/https://raw.githubusercontent.com/TZB679/USEFUL-LX-MUSIC-SOURCES/refs/heads/main/%5B%E4%B8%8D%E7%A8%B3%E5%AE%9A%5DLX(%E9%9D%9E%E5%AE%98%E6%96%B9)%E5%85%AC%E4%BC%97%E5%8F%B7%E9%9F%B3%E6%BA%90%20v4.js</span>
+                            </div>
+                        </a>
+
+
                     <div class="link-section">
                         <a href="https://houboven.lanzouw.com/b00hqtgx9c" class="link-item" target="_blank">
                             <i class="fas fa-cloud-download-alt"></i>
