--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                             <i class="fas fa-cloud-download-alt"></i>
                             <div class="link-text">
                                 <strong>直接可用的音源（点击下载）</strong>
-                                <span>https://ghproxy.net/https://raw.githubusercontent.com/TZB679/USEFUL-LX-MUSIC-SOURCES/refs/heads/main/%5B%E4%B8%8D%E7%A8%B3%E5%AE%9A%5DLX(%E9%9D%9E%E5%AE%98%E6%96%B9)%E5%85%AC%E4%BC%97%E5%8F%B7%E9%9F%B3%E6%BA%90%20v4.js</span>
+                                <span>直接可用，，畅享音乐带来的美好体验</span>
                             </div>
                         </a>
 
