Update link text for source update link

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                         <a href="https://houboven.lanzouw.com/b00hqtgx9c" class="link-item" target="_blank">
                             <i class="fas fa-cloud-download-alt"></i>
                             <div class="link-text">
-                                <strong>源更新链接</strong>
+                                <strong>源更新链接（最即时的更新，由Hobonn整理）</strong>
                                 <span>https://houboven.lanzouw.com/b00hqtgx9c</span>
                             </div>
                         </a>
