--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                             <i class="fas fa-cloud-download-alt"></i>
                             <div class="link-text">
                                 <strong>直接可用的音源（点击下载）</strong>
-                                <span>直接可用，，畅享音乐带来的美好体验</span>
+                                <span>直接可用，畅享音乐带来的美好体验</span>
                             </div>
                         </a>
 
