--- a/index.html
+++ b/index.html
@@ -717,13 +717,18 @@
                     <h3><i class="fas fa-info-circle"></i> 最新更新</h3>
                     <div class="update-info">
                         <div class="update-date">
-                            <i class="far fa-calendar-check"></i> 2025年12月
+                            <i class="far fa-calendar-check"></i> 提醒：2026年1月
                         </div>
                         <p>发现了压缩包的源更新链接，目前最新地址：https://github.com/TZB679/USEFUL-LX-MUSIC-SOURCES/releases以及https://houboven.lanzouw.com/b00hqtgx9c</p>
                     </div>
                     <p>本音源集合持续更新，建议定期访问本页面获取最新信息。</p>
                 </div>
                 
+                        </div>
+                        <p> 本页面仅供学习交流使用，请勿大肆宣传！！！</p>
+                    </div>
+                   
+
                 <div class="sidebar-card">
                     <h3><i class="fas fa-tags"></i> 标签分类</h3>
                     <div class="tag-list">
