--- a/index.html
+++ b/index.html
@@ -735,17 +735,42 @@
                     </div>
                 </div>
                 
-                <div class="sidebar-card">
-                    <h3><i class="fas fa-user"></i> 关于本人</h3>
-                    <p>音乐爱好者，喜欢整理和分享实用资源。专注于 LX Music 音源的收集与整理，致力于为音乐爱好者提供高质量的音源体验。</p>
-                    <div style="margin-top: 15px;">
-                        <p><i class="fas fa-envelope" style="color: #6a11cb; margin-right: 8px;"></i> 联系方式：通过 GitHub 项目 Issues</p>
-                    </div>
-                </div>
-            </aside>
-        </div>
+              <div class="sidebar-card">
+    <h3><i class="fas fa-user"></i> 关于本人</h3>
+    <p>音乐爱好者，喜欢整理和分享实用资源。专注于 LX Music 音源的收集与整理，致力于为音乐爱好者提供高质量的音源体验。</p>
+    <div style="margin-top: 15px;">
+        <p>
+            <i class="fas fa-envelope" style="color: #6a11cb; margin-right: 8px;"></i> 
+            联系方式：通过 GitHub 项目 
+            <a href="https://github.com/TZB679/USEFUL-LX-MUSIC-SOURCES/issues" 
+               target="_blank" 
+               style="color: #2575fc; text-decoration: none; font-weight: 500; 
+                      border-bottom: 1px solid rgba(37, 117, 252, 0.3); padding-bottom: 1px;
+                      transition: all 0.3s ease;">
+                Issues
+            </a>
+        </p>
     </div>
-    
+</div>
+
+<script>
+    // 添加悬停效果
+    document.addEventListener('DOMContentLoaded', function() {
+        const issueLink = document.querySelector('.sidebar-card a');
+        if (issueLink) {
+            issueLink.addEventListener('mouseenter', function() {
+                this.style.color = '#6a11cb';
+                this.style.borderBottomColor = '#6a11cb';
+                this.style.borderBottomWidth = '2px';
+            });
+            issueLink.addEventListener('mouseleave', function() {
+                this.style.color = '#2575fc';
+                this.style.borderBottomColor = 'rgba(37, 117, 252, 0.3)';
+                this.style.borderBottomWidth = '1px';
+            });
+        }
+    });
+</script>
     <footer>
         <div class="container">
             <div class="footer-line"></div>
