--- a/index.html
+++ b/index.html
@@ -611,15 +611,15 @@
         <i class="fas fa-music"></i>
     </div>
     
-    <header>
-        <div class="container">
-            <h1 class="blog-title">LX Music 音源分享</h1>
-            <p class="blog-subtitle">搜集了自本人使用 LX Music 以来整理的各种音源，持续更新中~</p>
-            <div class="publish-date">
-                <i class="far fa-calendar-alt"></i> 最后更新：2026年1月
-            </div>
+ <header>
+    <div class="container">
+        <h1 class="blog-title">LX Music 音源分享</h1>
+        <p class="blog-subtitle" style="opacity: 1; font-weight: 500;">搜集了自本人使用 LX Music 以来整理的各种音源，持续更新中~</p>
+        <div class="publish-date" style="margin-top: 20px;">
+            <i class="far fa-calendar-alt"></i> 最后更新：2026年1月
         </div>
-    </header>
+    </div>
+</header>
     
     <div class="main-content">
         <div class="container">
