Revamp header styling and content layout

--- a/index.html
+++ b/index.html
@@ -618,17 +618,21 @@
         <i class="fas fa-music"></i>
     </div>
     
-    <!-- 修复：确保header内所有内容都有正确的z-index -->
-    <header>
-        <div class="container">
-            <h1 class="blog-title">LX Music 音源分享</h1>
-            <p class="blog-subtitle" style="opacity: 1; font-weight: 500;">搜集了自本人使用 LX Music 以来整理的各种音源，持续更新中~</p>
-            <div class="publish-date" style="margin-top: 20px;">
-                <i class="far fa-calendar-alt"></i> 最后更新：2026年1月 
-            </div>
+   <header style="background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%); color: white; padding: 100px 0 80px; text-align: center;">
+    <div class="container">
+        <h1 style="font-size: 2.8rem; font-weight: 700; margin-bottom: 20px;">LX Music 音源分享</h1>
+        <p style="font-size: 1.2rem; margin: 0 auto 30px; max-width: 700px; font-weight: 500; color: rgba(255, 255, 255, 0.95);">
+            搜集了自本人使用 LX Music 以来整理的各种音源，持续更新中~
+        </p>
+        <div style="background-color: rgba(255, 255, 255, 0.25); 
+                   padding: 12px 30px; 
+                   border-radius: 50px; 
+                   font-size: 1rem;
+                   display: inline-block;">
+            📅 最后更新：2026年1月
         </div>
-    </header>
-    
+    </div>
+</header>
     <div class="main-content">
         <div class="container">
             <div class="content-section">
