Consolidate update and gratitude messages in index.html

--- a/index.html
+++ b/index.html
@@ -721,10 +721,8 @@
                         </div>
                         <p>目前最新地址：https://github.com/TZB679/USEFUL-LX-MUSIC-SOURCES/releases以及https://houboven.lanzouw.com/b00hqtgx9c</p>
                     </div>
-                    <p>本音源集合持续更新，建议定期访问本页面获取最新信息。</p>
-                   </div>
-                    <p>感谢guoyue2010（https://github.com/guoyue2010/lxmusic-）对本项目的大力支持！</p>
-                </div>
+                    <p>本音源集合持续更新，建议定期访问本页面获取最新信息。此外感谢guoyue2010（https://github.com/guoyue2010/lxmusic-）对本项目的大力支持！</p>
+                
                 
                         </div>
                         <p> 本页面仅供学习交流使用，请勿大肆宣传！！！</p>
