--- a/index.html
+++ b/index.html
@@ -668,6 +668,14 @@
                             </div>
                         </a>
 
+                        <a href="https://api.ikunshare.com/script?key=" class="link-item" target="_blank">
+                            <i class="fas fa-cloud-download-alt"></i>
+                            <div class="link-text">
+                                <strong>直接可用的源2</strong>
+                                <span>部分平台有限制</span>
+                            </div>
+                        </a>
+
 
                     <div class="link-section">
                         <a href="https://houboven.lanzouw.com/b00hqtgx9c" class="link-item" target="_blank">
@@ -677,7 +685,7 @@
                                 <span>https://houboven.lanzouw.com/b00hqtgx9c</span>
                             </div>
                         </a>
-                        
+
                         
                         <a href="https://github.com/TZB679/USEFUL-LX-MUSIC-SOURCES" class="link-item" target="_blank">
                             <i class="fab fa-github"></i>
